--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8">
   <title>我的第一個網頁</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>哈囉，世界！</h1>
   <p>這是我第一個自己做的網頁！</p>
+
+  <h2>🌟 關於我</h2>
+  <p>我正在學習如何做網站，這是我部署到 Vercel 的第一個專案。</p>
+
+  <h2>📌 我的興趣</h2>
+  <ul>
+    <li>寫程式</li>
+    <li>打電動</li>
+    <li>聽音樂</li>
+  </ul>
+
+  <h2>📫 聯絡方式</h2>
+  <p>Email：<a href="mailto:yourname@example.com">yourname@example.com</a></p>
 </body>
 </html>
